[package]
name = "bloom_filter"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
description = "A bloom filter caching implementation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", branch = "main" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
bitvec = "1"
hash32 = "0.3"
serde_qs = "0.12"
serde_json = "1.0"
serde = {  version = "1.0.26", features = ["derive"] }

[workspace]
